--- a/_config.yml
+++ b/_config.yml
@@ -3,19 +3,19 @@ title: Thomas Zühlke
 description: 'Business Card Page'
 url: 'http://www.jdroid.ml'
 baseurl: '/'
-profilepic: '/images/tzuehlke.jpg'
+profilepic: '/images/profile.jpg'
 bkimage: '/images/bk1.jpg'
 google_analytics: UA-XXXXXX-X
 font_awesome: 'XXXXXXXXXX.js'
 
 author:
   name: 'Thomas Zühlke'
-  email: info@thomas-zuehlke.de
-  twitter_username: thomzuehlke
+  email: wonjin2168@gmail.com
+#  twitter_username: thomzuehlke
 #  facebook_username: joshgerdes
-  github_username:  tzuehlke
-  linkedin_username:  thomas-zühlke-889182165
-  meetup_name: Azure-Meetup-Rostock-MV
+  github_username:  JDroid-git
+#  linkedin_username:  thomas-zühlke-889182165
+#  meetup_name: Azure-Meetup-Rostock-MV
 
 # Build settings
 destination: _site
