--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ url: "www.jdroid.ml" # the base hostname & protocol for your site e.g. http://wi
 username: Jdroid
 user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
 user_title: Android Developer
-email: anon@anon.com
-twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
-gplus_username:  lorem_ipsum
+email: wonjin2168@gamil.com
+linked_username: wonjin2168
+github_username:  jdroid-git
+gplus_username:  wonjin2168
 
 # Google-analytics
 google-analytics:
